Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 @@ -1,23 +0,0 @@
 # Bot Token [Required]
-BOT_TOKEN=
+BOT_TOKEN=MTIxMTIzNzk0ODMwMTc3NDg3OA.GVZSGy.LwyiRo26wEKTg8NStkNHbH626g8MNWkEdafpfI
 
 # Mongo Database Connection String [Required]
-MONGO_CONNECTION=
+MONGO_CONNECTION=mongodb+srv://a9fhlh:gxrn06@cluster0.y0yvfyr.mongodb.net/?retryWrites=true&w=majority
 
 # Webhooks [Optional]
 ERROR_LOGS=
